--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.btn-primary {
+  @apply bg-blue-500 hover:bg-blue-700 px-2 py-1 text-white rounded;
+}
+
+.btn-secondary {
+  @apply bg-red-500 hover:bg-red-700 px-2 py-1 text-white rounded;
+}
+
+.btn-third {
+  @apply bg-green-500 hover:bg-green-700 px-2 py-1 text-white rounded;
+}
+
+th, td {
+  @apply cursor-pointer px-1 py-2;
+}
+
+.loader {
+	border-top-color: #3498db;
+	-webkit-animation: spinner 1.5s linear infinite;
+	animation: spinner 1.5s linear infinite;
+}
+
+@-webkit-keyframes spinner {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
+}
+
+@keyframes spinner {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
